--- a/ui/scss/themes/dark.scss
+++ b/ui/scss/themes/dark.scss
@@ -22,6 +22,7 @@
   --color-card-background: var(--color-gray-9);
   --color-card-background2: var(--color-header-background);
   --color-card-background-highlighted: var(--color-gray-8);
+  --color-feature-background: var(--color-header-background);
 
   // Text
   --color-text-base: 255, 255, 255;
