--- a/ui/scss/component/_button.scss
+++ b/ui/scss/component/_button.scss
@@ -709,15 +709,15 @@ svg + .button__label {
     color: var(--color-slime);
   }
 }
-
-.button-following {
-  color: var(--color-primary-contrast) !important;
-  //background-color: rgba(var(--color-primary-dynamic),0.5) !important;
-  background-color: rgba(125, 125, 125, 0.5) !important;
-  .icon {
-    stroke: var(--color-primary-contrast) !important;
-  }
-}
+// bring back special button-following style later
+//.button-following {
+//  color: var(--color-primary-contrast) !important;
+//  //background-color: rgba(var(--color-primary-dynamic),0.5) !important;
+//  background-color: rgba(125, 125, 125, 0.5) !important;
+//  .icon {
+//    stroke: var(--color-primary-contrast) !important;
+//  }
+//}
 
 .recommended-content__bubble {
   // margin-top: var(--spacing-xs);
