Improve how the persist watch time is being stored; add clear cache button.

--- a/ui/scss/component/_settings.scss
+++ b/ui/scss/component/_settings.scss
@@ -18,3 +18,13 @@
     margin-left: 2.2rem;
   }
 }
+
+.settings {
+  &__persistWatchTimeCheckbox {
+    display: flex;
+    justify-content: end;
+  }
+  &__persistWatchTimeClearCache {
+    text-align: right;
+  }
+}
