--- a/ui/scss/component/_settings.scss
+++ b/ui/scss/component/_settings.scss
@@ -19,12 +19,12 @@
   }
 }
 
-.settings {
-  &__persistWatchTimeCheckbox {
-    display: flex;
-    justify-content: end;
-  }
-  &__persistWatchTimeClearCache {
-    text-align: right;
-  }
+.settings__persistWatchTimeCheckbox {
+  display: flex;
+  justify-content: end;
+  padding-bottom: var(--spacing-m);
+}
+
+.settings__persistWatchTimeCheckbox {
+  text-align: right;
 }
