--- a/ui/scss/component/_file-thumbnail.scss
+++ b/ui/scss/component/_file-thumbnail.scss
@@ -4,10 +4,11 @@
   left: 0;
   width: 100%;
   height: 5px;
-  background-color: gray;
+  background-color: var(--color-gray-7);
+  opacity: 0.5;
 }
 
 .file-thumbnail__viewed-bar-progress {
   height: 5px;
-  background-color: red;
+  background-color: var(--color-primary);
 }
