Add persistent watch time setting. (#7547)
* Add persistent watch time setting.

* floating bugfix --jessopb

* Improve how the persist watch time is being stored; add clear cache button.

* Add makeSelectContentWatchedPercentageForUri selector and give feedback when clearing cache.

* tweaks --jessopb

Co-authored-by: zeppi <jessopb@gmail.com>

--- a/ui/scss/component/_settings.scss
+++ b/ui/scss/component/_settings.scss
@@ -18,3 +18,14 @@
     margin-left: 2.2rem;
   }
 }
+
+.settings__persistWatchTimeCheckbox {
+  display: flex;
+  justify-content: end;
+  padding-bottom: var(--spacing-m);
+}
+
+.settings__persistWatchTimeCheckbox {
+  text-align: right;
+  padding-top: var(--spacing-m);
+}
