--- a/ui/scss/themes/light.scss
+++ b/ui/scss/themes/light.scss
@@ -43,7 +43,7 @@
   --color-tooltip-text: #fafafa;
 
   // Header
-  --color-header-button: var(--color-white); //var(--color-button-alt-bg);
+  --color-header-button: var(--color-card-background);
   --color-header-button-text: var(--color-black);
   --color-header-background: #ffffff;
   --color-feature-background: #ffffff;
