--- a/ui/component/viewers/videoViewer/internal/plugins/videojs-overlay/plugin.scss
+++ b/ui/component/viewers/videoViewer/internal/plugins/videojs-overlay/plugin.scss
@@ -19,7 +19,7 @@
     // IE8
     background-color: #646464;
     background-color: rgba(255, 255, 255, 0.4);
-    border-radius: round($nudge / 2);
+    border-radius: round($nudge * calc(1 / 2));
     padding: $nudge * 2;
     width: 33%;
   }
