AirPlay button fixes
Ticket: 1288

1. Move airplay slot away from the first.
2. Fix sizing to match the rest.

--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -634,7 +634,8 @@ $control-bar-icon-size: 0.8rem;
       }
     }
 
-    .vjs-chromecast-button {
+    .vjs-chromecast-button,
+    .vjs-airplay-button {
       .vjs-icon-placeholder {
         $chromecast-icon-size: 21px;
         width: $chromecast-icon-size;
