fix 0.53.1 style issues

--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -1142,7 +1142,7 @@
       width: 225px;
       padding-top: 4px;
       padding-right: 8px;
-      background-color: var(--color-brand-blue);
+      background-color: var(--color-gray-7);
       color: var(--color-primary-contrast);
       text-align: center;
       z-index: 1;
