Adjust padding bellow confirming label

--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -134,6 +134,10 @@
   list-style: none;
   position: relative;
 
+  .claim-tile__info {
+    padding-bottom: unset;
+  }
+
   .claim__menu-button {
     right: calc(var(--spacing-m) - 8px);
     margin-top: var(--spacing-xxs);
