--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -11,18 +11,14 @@ $actions-z-index: 2;
         }
       }
       // bring back later
-      //.button-following {
-      //  &.button--alt {
-      //    color: var(--color-text);
-      //    background-color: var(--color-button-alt-bg);
-      //    .icon {
-      //      stroke: var(--color-text);
-      //    }
-      //    &:hover {
-      //      color: var(--color-primary);
-      //    }
-      //  }
-      //}
+      .button-following {
+        &.button--alt {
+          color: var(--color-text);
+          .icon {
+            stroke: var(--color-text);
+          }
+        }
+      }
       .button-following:last-of-type {
         margin-left: 2px;
       }
