Add channel selector on HeaderMenuButton
- Moved from reach/ui to material/ui menu components, because reach ui wouldn't work with 2 menus
- This channel selector stores the default on settings
- setActiveChannelIfNotSet was deprecated, if the account has channels, it will always return a channel even if there is no active channel or stored channel

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -267,6 +267,12 @@ $actions-z-index: 2;
   margin-right: var(--spacing-xs);
 }
 
+.channel-thumbnail--xxsmall {
+  height: 16px;
+  width: 16px;
+  margin-right: var(--spacing-s) !important;
+}
+
 .channel-thumbnail--waiting {
   background-color: var(--color-gray-5);
   border-radius: var(--border-radius);
