Player: chapter follow-up tweaks
- Make the chapters button appear consistently.
  - Previously, it was only appearing for Original.
  - We still hide it for mobile, as per previous explanation.
- Changed the Chapters button position and popup aesthetics.

--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -634,6 +634,18 @@ $control-bar-icon-size: 0.8rem;
       }
     }
 
+    .vjs-chapters-button {
+      .vjs-menu {
+        width: 20em;
+        left: -3em;
+      }
+
+      li {
+        text-align: left;
+        padding: var(--spacing-xxxs) var(--spacing-s);
+      }
+    }
+
     .vjs-chromecast-button,
     .vjs-airplay-button {
       .vjs-icon-placeholder {
