--- a/ui/scss/component/_videojs.scss
+++ b/ui/scss/component/_videojs.scss
@@ -299,6 +299,9 @@ button.vjs-big-play-button {
 .vjs-custom-control-spacer {
   order: 9 !important;
 }
+.vjs-chapters-button {
+  order: 10 !important;
+}
 .vjs-button--autoplay-next {
   order: 10 !important;
 }
