--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -267,10 +267,19 @@ $actions-z-index: 2;
   margin-right: var(--spacing-xs);
 }
 
-.channel-thumbnail--xxsmall {
-  height: 16px;
-  width: 16px;
+.channel__selector .channel-thumbnail--xxsmall {
   margin-right: var(--spacing-s) !important;
+}
+
+.channel-thumbnail--xxsmall {
+  height: 1rem;
+  width: 1rem;
+
+  .ff-container,
+  .ff-canvas {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .channel-thumbnail--waiting {
