Fix important tags and remove unnecessary styles

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -268,7 +268,7 @@ $actions-z-index: 2;
 }
 
 .channel__selector .channel-thumbnail--xxsmall {
-  margin-right: var(--spacing-s) !important;
+  margin-right: var(--spacing-s);
 }
 
 .channel-thumbnail--xxsmall {
