per sub download work

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -19,7 +19,7 @@ $actions-z-index: 2;
           }
         }
       }
-      .button-following:last-of-type {
+      .button-following:not(first-of-type) {
         margin-left: 2px;
       }
     }
