--- a/ui/scss/component/_button.scss
+++ b/ui/scss/component/_button.scss
@@ -663,16 +663,18 @@ svg + .button__label {
   .button:first-child:not(:only-child) {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
-    margin-right: 1px;
   }
 
-  .button:nth-child(2) {
+  .button:not(:first-child):not(:last-child) {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    margin-left: 1px;
-    &:hover {
-      fill: var(--color-text) !important;
-    }
+  }
+
+  .button:last-child:not(:only-child) {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
   }
 
   .button--file-action {
