Bring back default channel functionality
- consolidate cases that need to auto set an active channel (like edit page) into channelSelector component
- also for consistency since some components would do it with button click and others on page mount
- prevent clear function on those pages (kind of a manual process to insert each page into the router condition)

--- a/ui/scss/component/_header.scss
+++ b/ui/scss/component/_header.scss
@@ -131,6 +131,8 @@
   flex: 1;
   height: var(--header-height);
   padding: var(--spacing-s) var(--spacing-m);
+  margin-right: var(--body-scrollbar-width);
+  width: unset;
 
   @media (max-width: $breakpoint-small) {
     padding: var(--spacing-xs);
