Update AR_6 to AR_18
- This increases the amount of ads, filling up the entire width. No more need to restrict with `max-width` ourself.

- Changed the ad-driver to top-right since the "Powered by Outbrain" text is now locked in bottom-right. Also made the container having a minimum height, as the method to "display the driver after ads are loaded" is not future proof -- it depends on the IDs being used by the ad. Reserving some space seems to be easiest, and it also reduces shifts as well.

--- a/ui/scss/component/_ads.scss
+++ b/ui/scss/component/_ads.scss
@@ -381,6 +381,8 @@ $BANNER_BORDER: 1px;
 }
 
 .banner-ad__container {
+  min-height: 250px;
+
   padding: var(--spacing-xxs) var(--spacing-m);
   @media (max-width: $breakpoint-small) {
     padding: var(--spacing-xxs) var(--spacing-xxs);
@@ -389,19 +391,21 @@ $BANNER_BORDER: 1px;
   @media (min-width: $breakpoint-small) {
     margin: auto;
     width: 100%;
-    max-width: 386px;
+  }
+
+  @media (min-width: $breakpoint-xlarge) {
+    max-width: calc(#{$breakpoint-xlarge} * 3 / 4);
   }
 }
 
 .banner-ad__driver {
-  display: none; // "= flex" when ads are fetched ('ob_holder' exists)
+  display: flex;
   flex-direction: row;
-  align-items: center;
+  max-width: 50%;
 
   border-left: $BANNER_BORDER solid var(--color-border);
-  border-top: $BANNER_BORDER solid var(--color-border);
-  border-radius: var(--border-radius) 0 var(--border-radius) 0;
-  max-width: 95%;
+  border-bottom: $BANNER_BORDER solid var(--color-border);
+  border-radius: 0 var(--border-radius) 0 var(--border-radius);
   float: right;
 
   font-size: var(--font-xsmall);
@@ -412,11 +416,6 @@ $BANNER_BORDER: 1px;
   > * {
     padding: 0 var(--spacing-xxxs);
   }
-}
-
-#ob_holder ~ .banner-ad__driver,
-.banner-ad__container[data-ob-mark='true'] ~ .banner-ad__driver {
-  display: flex;
 }
 
 .banner-ad__driver-label {
